@@ -1,12 +1,17 @@
 #!/sbin/sh
 
-# Sccsid @(#)crossln.sh	1.3 (gritter) 6/29/03
+# Sccsid @(#)crossln.sh	1.4 (gritter) 3/10/05
 
 # Create a relative symbolic link.
 
 usage() {
 	echo "usage: $1 target linkname [root]" >&2
 	exit 2
+}
+
+doit() {
+	rm -f -- "$2" || exit
+	exec @LNS@ -- "$1" "$2" || exit
 }
 
 test $# != 2 -a $# != 3 && usage $0
@@ -18,11 +23,6 @@ case $3 in
 	;;
 esac
 
-case $1 in
-/*)	;;
-*)	rm -f -- "$2" && exec @LNS@ -- "$1" "$2" || exit ;;
-esac
-
 case $2 in
 /*)	;;
 ..|../*)	echo "cannot resolve ../*" >&2; exit 1 ;;
@@ -30,39 +30,37 @@ case $2 in
 *)	set -- "$1" "`pwd`/$2" ${3+"$3"};;
 esac
 
-test -d "$2" && test ! -d "$1" && set -- "$1" "$2/`basename $1`" ${3+"$3"}
-
-test "x`dirname $1`" = "x`dirname $2`" && {
-	rm -f -- "$2" && exec @LNS@ -- "`basename $1`" "$2" || exit
-}
-
-list= d=$2
-while d=`dirname $d`; test "x$d" != x/ -a "x$d" != x.
-do
-	case $list in
-	'')	list=.. ;;
-	*)	list=../$list ;;
-	esac
-done
-
 case $1 in
-/*)	slash= ;;
-*)	slash=/ ;;
+/*)	;;
+*)	doit "$1" "$2"
+	;;
 esac
 
-if test "x$3" != x
-then
-	s= r=$3
-	while test "x$r" != x/ -a "x$r" != x.
-	do
-		s=../$s
-		r=`dirname $r`
-	done
-	file=/`expr "$1" : "$3\\(.*\\)"`
-	list=`expr "$list" : "$s\\(.*\\)"`
-else
-	file=$1
-fi
+test -d "$2" && test ! -d "$1" && set -- "$1" "$2/`basename $1`" ${3+"$3"}
 
-rm -f -- "$2"
-@LNS@ -- "$list$slash$file" "$2"
+tgt=`awk </dev/null 'BEGIN {
+	s1="'"$1"'"
+	s2="'"$2"'"
+	for (;;) {
+		i1 = index(s1, "/")
+		i2 = index(s2, "/")
+		if (i1 == 0 || i1 != i2 || \
+				substr(s1, 1, i1) != substr(s2, 1, i2))
+			break
+		s1 = substr(s1, i1 + 1)
+		s2 = substr(s2, i2 + 1)
+	}
+	n = 0
+	for (i = 1; i <= length(s2); i++) {
+		if (substr(s2, i, 1) == "/") {
+			n++
+			while (substr(s2, i+1, 1) == "/")
+				i++
+		}
+	}
+	while (n-- > 0)
+		s1 = ("../" s1)
+	print s1
+}'`
+
+doit "$tgt" "$2"
